--- a/package.json
+++ b/package.json
@@ -1,24 +1,48 @@
 {
-  "name": "express-scratch",
+  "name": "node-homework",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "Code the Dream Node/Express Homework",
+  "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app"
+    "test": "npx cross-env NODE_ENV=test jest --testPathPatterns=test/ --verbose --maxWorkers=1",
+    "lesson11TDD": "npx cross-env NODE_ENV=test node ./lesson11TDD/jestConfig/run-lesson11-tdd.js",
+    "dev": "nodemon app.js",
+    "start": "node app",
+    "tdd": "./tdd.sh"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@prisma/client": "^6.10.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "express-xss-sanitizer": "^2.0.0",
+    "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
-    "nodemon": "^3.1.10",
-    "prettier": "^3.6.2"
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "prisma": "^6.11.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "eslint": "^9.31.0",
-    "globals": "^16.3.0"
+    "@eslint/js": "^9.24.0",
+    "cross-env": "^7.0.3",
+    "csv-parser": "^3.2.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "globals": "^16.0.0",
+    "jest": "^30.0.3",
+    "node-mocks-http": "^1.17.2",
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.2",
+    "pg-cursor": "^2.15.2",
+    "prettier": "^3.6.1",
+    "supertest": "^7.1.1"
   }
 }
